--- a/rep01.html
+++ b/rep01.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>3a班12番 sleepingyus</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -31,11 +31,11 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        スクラッチを使ってサイエンスアートを作った.<br>
+        座標をプログラムして、円のような図形や自分のオリジナルのアートを作った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        数字を1変えるだけでアートが微妙に変わってくるところが魅力的だった。<br>
+        自分の理想の形のアートは作れなかったが、変わりゆく形を見ていて楽しかった。<br>
       </div>
     </div>
 
@@ -44,11 +44,10 @@
       <img src="game.png" alt="りんごチャッチゲームの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        落ちてくるリンゴをキャッチするプログラムを作った。<br>
+        リンゴを設定するプログラムとキャラクターを動かすプログラムの2個作った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        自分で操作するためのプログラムを作るのは簡単だったが、リンゴを不規則に落とすためのプログラムを作るのがが難しかった。
       </div>
     </div>
 
@@ -58,8 +57,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://yourID.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        <br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
@@ -70,15 +68,15 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://sleepingyus.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="htts://leepingyus.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://sleepingyus.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://sleepingyus.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年5月21日
   </div>
 </body>
 </html>
