--- a/rep01.html
+++ b/rep01.html
@@ -31,11 +31,11 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使ってサイエンスアートを作った.<br>
-        座標をプログラムして、円のような図形や自分のオリジナルのアートを作った。<br>
+        スクラッチを使ってサイエンスアートを作りました.<br>
+        座標をプログラムして、円のような図形や自分のオリジナルのアートを作りました。<br>
         2.感想<br>
-        数字を1変えるだけでアートが微妙に変わってくるところが魅力的だった。<br>
-        自分の理想の形のアートは作れなかったが、変わりゆく形を見ていて楽しかった。<br>
+        数字を1変えるだけでアートが微妙に変わってくるところが魅力的でした。<br>
+        自分の理想の形のアートは作れなかったが、変わりゆく形を見ていて楽しかったです。<br>
       </div>
     </div>
 
@@ -44,10 +44,10 @@
       <img src="game.png" alt="りんごチャッチゲームの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        落ちてくるリンゴをキャッチするプログラムを作った。<br>
-        リンゴを設定するプログラムとキャラクターを動かすプログラムの2個作った。<br>
+        落ちてくるリンゴをキャッチするプログラムを作りました。<br>
+        リンゴを設定するプログラムとキャラクターを動かすプログラムの2個作りました。<br>
         2.感想<br>
-        自分で操作するためのプログラムを作るのは簡単だったが、リンゴを不規則に落とすためのプログラムを作るのがが難しかった。
+        自分で操作するためのプログラムを作るのは簡単だったが、リンゴを不規則に落とすためのプログラムを作るのがが難しかったです。
       </div>
     </div>
 
