--- a/rep01.html
+++ b/rep01.html
@@ -35,7 +35,7 @@
         座標をプログラムして、円のような図形や自分のオリジナルのアートを作りました。<br>
         2.感想<br>
         数字を1変えるだけでアートが微妙に変わってくるところが魅力的でした。<br>
-        自分の理想の形のアートは作れなかったが、変わりゆく形を見ていて楽しかったです。<br>
+        自分の理想の形のアートは作れませんでしたが、変わりゆく形を見ていて楽しかったです。<br>
       </div>
     </div>
 
@@ -47,7 +47,7 @@
         落ちてくるリンゴをキャッチするプログラムを作りました。<br>
         リンゴを設定するプログラムとキャラクターを動かすプログラムの2個作りました。<br>
         2.感想<br>
-        自分で操作するためのプログラムを作るのは簡単だったが、リンゴを不規則に落とすためのプログラムを作るのがが難しかったです。
+        自分で操作するためのプログラムを作るのは簡単でしたが、リンゴを不規則に落とすためのプログラムを作るのがが難しかったです。
       </div>
     </div>
 
