--- a/rep01.html
+++ b/rep01.html
@@ -57,7 +57,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sleepingyus.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        <br>
+        自分のホームページを作成して、そこに自分の<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
@@ -69,14 +69,14 @@
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sleepingyus.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="htts://leepingyus.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://sleepingyus.github.io/web/rep02.html">2週目のレポート</a><br>
         <a href="https://sleepingyus.github.io/web/rep03.html">3週目のレポート</a><br>
         <a href="https://sleepingyus.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：2025年5月21日
+    作成日：2025年5月22日
   </div>
 </body>
 </html>
