--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使ってサイエンスアートを作りました.<br>
+        スクラッチを使ってサイエンスアートを作りました。<br>
         座標をプログラムして、円のような図形や自分のオリジナルのアートを作りました。<br>
         2.感想<br>
         数字を1変えるだけでアートが微妙に変わってくるところが魅力的でした。<br>
