--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>〇〇〇〇のページです。</div>
+    <div>sleepingyusのページです。</div>
   </div>
   <div class=main>
     <div>
-      <h2>特徴・特技</h2>
+      <h2>好きな歌手</h2>
       <div>
-        sleeeeeeeeeeeeeeeeeeeeeeeeeeeeping
+      藤井風　一択  
       </div>
     </div>
 
     <div>
       <h2>趣味・嗜好</h2>
       <div>
-        YouTubeみてもおもしろくないよ、、、
+      　野球観戦、プラモデル制作、体動かすこと
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年5月22日
   </div>
 </body>
 </html>
