--- a/rep01.html
+++ b/rep01.html
@@ -57,10 +57,9 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sleepingyus.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        自分のホームページを作成して、そこに自分の<br>
+        自分のオリジナルのホームページを作成して、そこに自分の好きな歌手、趣味を書き込み、自己紹介を作りました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        このコマンドみたいなページを使ってサイトを作っていることですごく難しさを感じました。プロの制作者の凄さが改めて感じました。<br>
       </div>
     </div>
 
