--- a/rep01.html
+++ b/rep01.html
@@ -47,7 +47,7 @@
         落ちてくるリンゴをキャッチするプログラムを作りました。<br>
         リンゴを設定するプログラムとキャラクターを動かすプログラムの2個作りました。<br>
         2.感想<br>
-        自分で操作するためのプログラムを作るのは簡単でしたが、リンゴを不規則に落とすためのプログラムを作るのがが難しかったです。
+        自分で操作するためのプログラムを作るのは簡単でしたが、リンゴを不規則に落とすためのプログラムを作るのが難しかったです。
       </div>
     </div>
 
