--- a/rep01.html
+++ b/rep01.html
@@ -57,9 +57,9 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://sleepingyus.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        自分のオリジナルのホームページを作成して、そこに自分の好きな歌手、趣味を書き込み、自己紹介を作りました。<br>
+      　自分のオリジナルのホームページを作成し、そこに自分の好きな歌手や趣味を書き込み、自己紹介のサイトを作りました。<br>
         2.感想<br>
-        このコマンドみたいなページを使ってサイトを作っていることですごく難しさを感じました。プロの制作者の凄さが改めて感じました。<br>
+        このコマンドのようなページを使ってサイトを作ることは、非常に難しさを感じました。プロの制作者のすごさを改めて実感しました。<br>
       </div>
     </div>
 
