--- a/rep02.html
+++ b/rep02.html
@@ -30,12 +30,9 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        実習実験で学習した内容をウェブサイトに書き込むためにスクリーンショットを撮り、挿入して、学習した内容について簡単にまとめた。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
-        3. 2週目が完成した人は1週目のレポートも完成させる<br>
+        このような感想をgithubに表示するためにアルファベットで書かれた難しいコマンドのようなサイトで編集したりできて、ウェブサイトの凄さや新しい発見がたくさんあった。<br>
       </div>
     </div>
 
@@ -44,7 +41,7 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
+        Teachable Machineを使って <br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
