--- a/rep02.html
+++ b/rep02.html
@@ -41,11 +41,9 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        Teachable Machineを使って <br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        Teachable Machineを使ってコンピュータのトレーニングをしました。それぞれの手の動きをスクラッチの拡張機能を使って、手の動きに合わせて動くプログラムを作成しました。 <br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        AIが写真を自動的に処理して、グー、チョキ、パー、それ以外の場合に合わせて判断し「その手の動きはこうだ」と的確に表示するところにAIの凄さを改めて感じました。<br>
       </div>
     </div>
 
@@ -54,11 +52,9 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VRゴーグルを使用して、roblox、wrokroomsの中で友達と一緒に大阪高専のマップを探索したり、喋ったりしました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        3Dで実際に現実を見てるかのようにすごくVRに没頭していました。友達と一緒に探索できたことがすごく楽しかったです。<br>
       </div>
     </div>
 
