--- a/rep02.html
+++ b/rep02.html
@@ -30,9 +30,9 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        実習実験で学習した内容をウェブサイトに書き込むためにスクリーンショットを撮り、挿入して、学習した内容について簡単にまとめた。<br>
+        実習実験で学習した内容をウェブサイトに書き込むためにスクリーンショットを撮り、挿入して、学習した内容について簡単にまとめました。<br>
         2.感想<br>
-        このような感想をgithubに表示するためにアルファベットで書かれた難しいコマンドのようなサイトで編集したりできて、ウェブサイトの凄さや新しい発見がたくさんあった。<br>
+        このような感想をgithubに表示するためにアルファベットで書かれた難しいコマンドのようなサイトで編集したりできて、ウェブサイトの凄さや新しい発見がたくさんありました。<br>
       </div>
     </div>
 
