--- a/rep03.html
+++ b/rep03.html
@@ -31,11 +31,9 @@
       <a href="https://yourID.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        webプログラミング道場を使ってプログラミングをしました。プログラムの内容をA-Frameというサイトのものを使用しました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        プログラムが複雑すぎて全然理解できませんでした。<br>
       </div>
     </div>
     <div>
@@ -44,7 +42,7 @@
       <a href="https://yourID.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        ES-Jamを使って伝言板をつくるためにアルファベットや記号を使って一つ一つ打ち込んで動作するようにしました。<br>
+        同じくwebプログラミング道場を使って伝言板をつくるためにアルファベットや記号を使って一つ一つ打ち込んで動作するようにしました。<br>
         2.感想<br>
         打ち間違いが無いように一つ一つ丁寧にすることが大変でした。記号の配置が全然わからなかったので、探すことで一苦労でした。<br>
       </div>
