--- a/rep03.html
+++ b/rep03.html
@@ -33,7 +33,7 @@
         1.内容<br>
         webプログラミング道場を使ってプログラミングをしました。プログラムの内容をA-Frameというサイトのものを使用しました。<br>
         2.感想<br>
-        プログラムが複雑すぎて全然理解できませんでした。<br>
+        プログラムが複雑すぎて全然理解できませんでした。座標や大きさの数字を一つでも変更すると状態が変わるので、頭がこんがらがりました。<br>
       </div>
     </div>
     <div>
