--- a/rep03.html
+++ b/rep03.html
@@ -53,7 +53,7 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        x軸y軸z軸の線が表示されていて、その空間の中に今日のVR空間で出てきたようなものがありました。その中で操作して色々しました。<br>
+        x軸y軸z軸の線が表示されていて、その空間の中に今日のVR空間で出てきたようなものがありました。その中で操作したり色々しました。<br>
         2.感想<br>
         VRのコントローラの操作が難しくて、最初何をやったらいいのかわからなかったです。慣れたら少しずつものを掴めるようになったり色々できるようになりました。<br>
       </div>
