--- a/rep03.html
+++ b/rep03.html
@@ -53,9 +53,9 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        x軸y軸z軸の線が表示されていて、その空間の中に今日のVR空間で出てきたようなものがありました。その中で操作したり色々しました。<br>
+        x軸、y軸、z軸の線が表示されていて、その空間の中に今日のVR空間で出てきたようなものがありました。その中で操作したり、いろいろしました。<br>
         2.感想<br>
-        VRのコントローラの操作が難しくて、最初何をやったらいいのかわからなかったです。慣れたら少しずつものを掴めるようになったり色々できるようになりました。<br>
+        VRのコントローラーの操作が難しくて、最初何をやったらいいのかわからなかったです。慣れたら少しずつ物を掴めるようになったり、いろいろできるようになりました。<br>
       </div>
     </div>
 
